fix player image expand/collapse transition

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -71,10 +71,12 @@
     margin: 0.6rem 0 0;
     transition: all 300ms;
     max-width: 260px;
+    transition: width 300ms;
 }
 
 .playerCard img.collapsed {
-    width: 0%;
+    width: 0;
+    transition: all 0s;
 }
 
 .playerCard p:first-of-type {
@@ -128,10 +130,6 @@
     width: 4px;
     margin: 0 auto;
     height: 6rem;
-}
-
-.playerCard img.collapsed {
-    display: none;
 }
 
 @media only screen and (prefers-contrast: no-preference) {
